# MidShake

./: .gitattributes  .gitignore  LICENSE  README.md  debug.txt  full.ms  midshake.py  midshake_tokenize_old.py
bindings/: CMakeLists.txt  midshake_bindings.cpp
cpp/: full.cpp  midshake_engine.cpp  midshake_engine.hpp  midshake_runtime.cpp  midshake_runtime.hpp  midshake_runtime_types.hpp  stdlib.hpp
docs/: examples.md  roadmap.md  stdlib_reference.md  syntax.md
examples/: comparisons.ms  error.ms  full.ms  functions.ms  hello.ms  stdlib.ms  user_input.ms  using_stdlib.ms
python/: midshake.py  midshake_ast.py  midshake_cli.py  midshake_compile.py  midshake_compiler.py  midshake_interpreter.py  midshake_lsp.py  midshake_parser.py  midshake_runtime.py  midshake_runtime_stub.py  midshake_tokenizer.py
tools/: inspect_tokens.py
